--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@tailwindcss/postcss": "^4.1.11",
         "chart.js": "4.4.2",
         "crypto-js": "^4.2.0",
+        "exceljs": "^4.4.0",
+        "file-saver": "^2.0.5",
         "jspdf": "^1.5.3",
         "jspdf-autotable": "^3.4.3",
         "moment": "^2.29.4",
@@ -32,6 +34,7 @@
         "rxjs": "~7.8.2",
         "tailwindcss-primeui": "^0.6.1",
         "tslib": "^2.8.1",
+        "xlsx": "^0.18.5",
         "zone.js": "~0.15.1"
     },
     "devDependencies": {
@@ -39,6 +42,7 @@
         "@angular/cli": "^20",
         "@angular/compiler-cli": "^20",
         "@types/crypto-js": "^4.2.2",
+        "@types/file-saver": "^2.0.7",
         "@types/jasmine": "~5.1.0",
         "@types/jspdf": "^1.3.3",
         "autoprefixer": "^10.4.20",
