--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "jspdf": "^3.0.3",
         "jspdf-autotable": "^3.4.3",
         "moment": "^2.29.4",
+        "ngx-material-timepicker": "^13.1.1",
         "primeclt": "^0.1.5",
         "primeicons": "^7.0.0",
         "primeng": "^20",
